# coding_practice

./: Dockerfile  bitbucket-pipelines.yml  blaster.py  dbparse.h  environment.yaml  environment.yml  evergreen.yaml  extract_tags.py  make_conda.py  make_conda_linux.py  meta.yaml  mvtabusearch.h  run_blaster.py  setup.cfg  setup.py  version.h  version.py
.github/workflows/: conda-linux-release.yml  conda-osx-release.yml  conda-release.yml  conda.yml  copy.yml  linux-manual.yml  linux.yml  osx-manual.yml  release.yml  releases.yml
cgecore/: __init__.py
conda/: build.sh  download-evergreen-db.sh  environment.yml  make_conda.py  make_conda_linux.py  make_conda_osx.py  meta.yaml  meta.yaml.template  setup.cfg  setup.py
envs/: linux-build.yml  osx-build.yaml  osx-build.yml
info/: about.json  files  hash_input.json  index.json  paths.json
info/recipe/: conda_build_config.yaml  meta.yaml  meta.yaml.template
info/test/: run_test.py
scripts/: environment.yml
