[metadata]
name = evergreen
version = 1.0.0
description = evergreen: summary test
url = https://bitbucket.org/genomicepidemiology/evergreen
author = Malte Hallgren
author_email = malhal@food.dtu.dk
license = Apache 2.0

[options]
packages = evergreen
install_requires =

include_package_data = True
zip_safe = False
python_requires = >=2.7

[options.entry_points]
console_scripts =
    evrgreen = evergreen.__main__:main
